--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,9 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+
+
+users:
+    path: /users
+    controller: App\Controller\UserController::test
+    methods: [GET]
